# jam-shed

./: LICENSE  README.md  mise.toml  pyproject.toml
scripts/: download_soundfonts.py
src/jam_shed/: __init__.py
src/jam_shed/agents/: __init__.py  base.py  bassist.py  drummer.py  factory.py  keyboardist.py  lead_guitarist.py  rhythm_guitarist.py  style_calibration.py
src/jam_shed/core/: __init__.py  audio.py  brain.py  constants.py  session.py  theory.py
src/jam_shed/midi/: __init__.py  engine.py  message.py
src/jam_shed/tui/: __init__.py  app.py  visual.py
src/jam_shed/utils/: __init__.py  debug.py  logging.py
tests/: conftest.py  mock_midi.py  test_agent_behavior.py  test_agent_integration.py  test_brain.py  test_jam_arranger.py  test_jam_role_policies.py  test_midi_silence.py  test_musicality_enhancements.py  test_session.py  test_theory.py  test_tui_timing_regression.py
