[project]
name = "jam-shed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Weisz", email = "github@jweisz.org" }
]
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.3",
    "pyfluidsynth>=1.3.4",
    "python-rtmidi>=1.5.8",
    "requests>=2.32.5",
    "textual>=7.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
