[project]
name = "jam-shed"
version = "0.1.0"
description = "AI-powered interactive music jamming with virtual band members"
readme = "README.md"
authors = [
    { name = "Justin Weisz", email = "github@jweisz.org" }
]
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.3",
    "pyfluidsynth>=1.3.4",
    "python-rtmidi>=1.5.8",
    "requests>=2.32.5",
    "textual>=8.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
